// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    class="css-8y3igr"
    id="headerReference"
  >
    <div
      class="chakra-stack css-ryi8m5"
    >
      <div
        class="chakra-stack css-1jjq5p5"
      >
        <div
          class="css-0"
        >
          <h2
            class="chakra-heading css-0"
          />
        </div>
        <div
          class="css-0"
        >
          <div
            class="chakra-input__group css-bx0blc"
            data-group="true"
          >
            <input
              class="chakra-input css-1n0hj84"
              placeholder="Search"
              type="text"
              value=""
            />
            <div
              class="chakra-input__right-element css-vcnsx7"
            >
              <button
                class="chakra-button css-xsdlqf"
                data-testid="search-header-button"
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly and clear the search values 1`] = `
<div>
  <div
    class="css-8y3igr"
    id="headerReference"
  >
    <div
      class="chakra-stack css-ryi8m5"
    >
      <div
        class="chakra-stack css-1jjq5p5"
      >
        <div
          class="css-0"
        >
          <h2
            class="chakra-heading css-0"
          />
        </div>
        <div
          class="css-0"
        >
          <div
            class="chakra-input__group css-bx0blc"
            data-group="true"
          >
            <input
              class="chakra-input css-1n0hj84"
              placeholder="Search"
              type="text"
              value=""
            />
            <div
              class="chakra-input__right-element css-vcnsx7"
            >
              <button
                class="chakra-button css-xsdlqf"
                data-testid="search-header-button"
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with no params, add a search value and submits a search 1`] = `
<div>
  <div
    class="css-8y3igr"
    id="headerReference"
  >
    <div
      class="chakra-stack css-ryi8m5"
    >
      <div
        class="chakra-stack css-1jjq5p5"
      >
        <div
          class="css-0"
        >
          <h2
            class="chakra-heading css-0"
          />
        </div>
        <div
          class="css-0"
        >
          <div
            class="chakra-input__group css-bx0blc"
            data-group="true"
          >
            <input
              class="chakra-input css-1n0hj84"
              placeholder="Search"
              type="text"
              value="hello"
            />
            <div
              class="chakra-input__right-element css-vcnsx7"
            >
              <button
                class="chakra-button css-xsdlqf"
                data-testid="search-header-button"
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
